--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Some Weekend Morning
+title: Some Random Weekend
 email: seimith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is a collection of some random thoughts, #TILs, and some tips for myself. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://seimith.github.io" # the base hostname & protocol for your site
 twitter_username: themcsuth
 github_username:  seimith
 
