--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: kaixo, i'm smith.
+title: // some random weekend blog (seimith.github.io)
 email: seimith@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is a collection of some random thoughts, #TILs, and some tips for myself.
